--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: 'C:/Program Files (x86)/IIS/Microsoft Web Deploy V3'
+        run: |
+            'cd "C:/Program Files (x86)/IIS/Microsoft Web Deploy V3"'
+            '.\msdeploy.exe'
   # This workflow contains a single job called "build"
  
 
