--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,9 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
+        
         run: |
             'cd "C:/Program Files (x86)/IIS/Microsoft Web Deploy V3"'
-            '.\msdeploy.exe'
+            '.\msdeploy.exe -help -verb'
+            'echo "$HOME/.local/bin"'
   # This workflow contains a single job called "build"
  
 
