--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,10 +5,9 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
+    types: [closed,merge]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,7 +16,6 @@ on:
 jobs:
 
   teste:
-    if: github.event.pull_request.merged == 'true'
     # The type of runner that the job will run on
     runs-on: windows-latest
 
