--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,11 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
-    branches: [ main ]
+    branches:
+        - master
+    types: 
+        - ready_for_review
+        - review_requested                            
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,7 +20,7 @@ jobs:
 
      
   teste:
-    if: github.event.pull_request.merged == true
+    
     # The type of runner that the job will run on
     runs-on: windows-latest
 
