--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,15 +5,10 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request:
-    branches:
-        - main
-    types: 
-        - ready_for_review
-        - review_requested                            
-
+ pull_request:
+   types: [assigned, opened, synchronize, reopened]
+    
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
