--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,8 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
- pull_request:
-   types: [closed]
+ push:
+    branches: [ main ]
     
   # Allows you to run this workflow manually from the Actions tab
 
